# zeroconf-lookup

./: .gitignore  .~lock.README.odt#  Chrome.crx  INSTALL.md  LICENSE  Makefile  PRIVACY.md  README.md  README.odt  description.txt  railduino-zeroconf-lookup.xpi
Apple_C/: .gitignore  CMakeLists.txt  Makefile  config.h.in  zeroconf_lookup-2.2.0.tgz  zeroconf_lookup-2.2.0.tgz.sha256  zeroconf_lookup-2.4.0.tgz  zeroconf_lookup-2.4.0.tgz.sha256  zeroconf_lookup-2.4.1.tgz  zeroconf_lookup-2.4.1.tgz.sha256  zeroconf_lookup-2.4.2.tgz  zeroconf_lookup-2.4.2.tgz.sha256
Apple_C/src/: Makefile  common.h  dnssd.c  install.c  main.c  util.c
Apple_Go/: Makefile  dnssd.go  install.go  main.go  zeroconf.go
Chrome/: manifest.json
Chrome/_locales/de/: messages.json
Chrome/_locales/en/: messages.json
Chrome/popup/: lookup.css  lookup.html  lookup.js
Firefox/: manifest.json
Firefox/_locales/de/: messages.json
Firefox/_locales/en/: messages.json
Firefox/popup/: lookup.css  lookup.html  lookup.js
Host-C/: .gitignore  CMakeLists.txt  Makefile  avahi.c  common.h  config.c  config.h.in  dns-msg-parser.c  dns-msg-parser.h  dnssd.c  empty.c  install-manifest.sh  install.c  install.sh  linux-manifest.sh  main.c  mdnssd.c  options.c  parser.c  query.c  util.c  zeroconf_lookup.conf.example
Host-C-Onetime/: Makefile  common.h  dns-msg-parser.c  dns-msg-parser.h  install.sh  main.c  mdnssd.c  util.c
Host-C/cmake/Modules/: FindAvahi.cmake  FindDNSSD.cmake
Host-C/src/: avahi.c  common.h  dnssd.c  empty.c  install.c  main.c  options.c  parser.c  parser.h  query.c
Host-Go/: Makefile  avahi.go  build.bat  dnssd.go  install.go  mDNSResponder.go  main.go  query.go  update.bat
Linux_C/: Makefile  avahi.c  common.h  config.c  config.h  configure  install.c  main.c  parser.c  parser.h  query.c  setup.sh  util.c  variables  zeroconf-lookup_2.3.1-1_amd64.deb  zeroconf-lookup_2.3.2-1_amd64.deb  zeroconf-lookup_2.4.0-1_amd64.deb  zeroconf-lookup_2.4.1-1_amd64.deb  zeroconf-lookup_2.4.2-1_amd64.deb  zeroconf_lookup-2.3.1-1.x86_64.rpm  zeroconf_lookup-2.3.2-1.x86_64.rpm  zeroconf_lookup-2.4.0-1.x86_64.rpm  zeroconf_lookup-2.4.1-1.x86_64.rpm  zeroconf_lookup-2.4.2-1.x86_64.rpm
Linux_Go/: avahi.go  install.go  main.go  setup.sh  zeroconf.go
Windows_Go/: dnssd.go  install.go  main.go  make.bat  zeroconf.go
Windows_Go_Command/: .gitignore  dnssd.go  install.go  main.go  make.bat  zeroconf.go
test-data/: output_avahi-browse  output_dns-sd_G-127.local.  output_dns-sd_G-LG-NAS-N1A1.local.  output_dns-sd_G-T430v.local.  output_dns-sd_G-dhcppc0.local.  output_dns-sd_Z
